--- a/src/components/NoteList.css
+++ b/src/components/NoteList.css
@@ -119,7 +119,7 @@
 
 .note-header {
     display: flex;
-    justify-content: space-between;
+    justify-content: initial;
     align-items: flex-start;
     margin-bottom: 0.5rem;
 }
@@ -261,4 +261,6 @@
     font-size: 0.9rem;
     color: #666;
     margin-top: 0.25rem;
+    border-radius: 6px;
+    background-color: aliceblue;
 } 
